force-app/main/default/objects/Branding__c/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <description>Sichtbare Komponentes des Maklerportals</description>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>credits</fullName>
            </value>
            <value>
                <fullName>infothek</fullName>
            </value>
            <value>
                <fullName>immofinder</fullName>
                <default>true</default>
                <label>immofinder</label>
            </value>
            <value>
                <fullName>immoframe</fullName>
            </value>
            <value>
                <fullName>landingpage</fullName>
            </value>
            <value>
                <fullName>leads</fullName>
            </value>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>persoenlicher_betreuer</fullName>
            </value>
            <value>
                <fullName>provision</fullName>
            </value>
            <value>
                <fullName>terminplaner</fullName>
            </value>
            <value>
                <fullName>whis</fullName>
            </value>
            <value>
                <fullName>whtv</fullName>
            </value>
            <value>
                <fullName>ferienimmobilien</fullName>
            </value>
            <value>
                <fullName>kapitalanlageimmobilien</fullName>
            </value>
            <value>
                <fullName>kontakte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>