force-app/main/default/objects/Branding__c/fields/Default_Foto__c.field-meta.xml
<CustomField>
    <fullName>Default_Foto__c</fullName>
    <description>wird angezeigt wenn der User kein Foto hochgeladen hat</description>
    <label>Default_Foto</label>
    <type>Url</type>
</CustomField>