force-app/main/default/objects/Branding__c/fields/Default_Logo__c.field-meta.xml
<CustomField>
    <fullName>Default_Logo__c</fullName>
    <description>wird angezeigt wenn der User kein Logo hochgeladen hat</description>
    <label>Default Logo</label>
    <type>Url</type>
</CustomField>