force-app/main/default/objects/Branding__c/fields/Farbe_RGB_1__c.field-meta.xml
<CustomField>
    <fullName>Farbe_RGB_1__c</fullName>
    <description>RGB Farbe
255,255,255</description>
    <label>Farbe_RGB_1</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>