force-app/main/default/objects/Branding__c/fields/Farbe_RGB_2__c.field-meta.xml
<CustomField>
    <fullName>Farbe_RGB_2__c</fullName>
    <description>RGB Farbcode
255,255,255</description>
    <label>Farbe_RGB_2</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>