force-app/main/default/objects/Branding__c/fields/Favicon_Datei_1__c.field-meta.xml
<CustomField>
    <fullName>Favicon_Datei_1__c</fullName>
    <label>Favicon_Datei_1</label>
    <type>Url</type>
</CustomField>