force-app/main/default/objects/Branding__c/fields/Info_Copyright__c.field-meta.xml
<CustomField>
    <fullName>Info_Copyright__c</fullName>
    <description>Copyright Information auf der Webseite</description>
    <label>Info_Copyright</label>
    <length>255</length>
    <type>Text</type>
</CustomField>