force-app/main/default/objects/Branding__c/fields/Info_Default_Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Info_Default_Finanzierung__c</fullName>
    <description>Default Finanzierung Info die angezeigt wird, wenn bei einer Immobilie keine Finanzierungsinfo angegeben wurde</description>
    <label>Info_Default_Finanzierung</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>