force-app/main/default/objects/Branding__c/fields/Link_AGB__c.field-meta.xml
<CustomField>
    <fullName>Link_AGB__c</fullName>
    <description>link zu den Allgemeinen Geschäftsbedingungen</description>
    <label>Link_AGB</label>
    <type>Url</type>
</CustomField>