force-app/main/default/objects/Branding__c/fields/Link_DSE__c.field-meta.xml
<CustomField>
    <fullName>Link_DSE__c</fullName>
    <description>link zu den Datenschutzbestimmungen</description>
    <label>Link_DSE</label>
    <type>Url</type>
</CustomField>