force-app/main/default/objects/Branding__c/fields/Link_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Link_Facebook__c</fullName>
    <description>link zur Facebook-Account des Accounts</description>
    <label>Link_Facebook</label>
    <type>Url</type>
</CustomField>