force-app/main/default/objects/Branding__c/fields/Link_Impressum__c.field-meta.xml
<CustomField>
    <fullName>Link_Impressum__c</fullName>
    <description>Link zur Impressum-Seite</description>
    <label>Link_Impressum</label>
    <type>Url</type>
</CustomField>