force-app/main/default/objects/Branding__c/fields/Link_Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Link_Kontakt__c</fullName>
    <description>Link zur Kontakt-Seite</description>
    <label>Link_Kontakt</label>
    <type>Url</type>
</CustomField>