force-app/main/default/objects/Branding__c/fields/Logo_Datei_1__c.field-meta.xml
<CustomField>
    <fullName>Logo_Datei_1__c</fullName>
    <description>Name der Logo Datei 1</description>
    <label>Logo_Datei_1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>