force-app/main/default/objects/Branding__c/fields/Logo_Datei_2__c.field-meta.xml
<CustomField>
    <fullName>Logo_Datei_2__c</fullName>
    <description>Name der Logo Datei 2</description>
    <label>Logo_Datei_2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>