force-app/main/default/objects/Branding__c/listViews/Support_Branding.listView-meta.xml
<ListView>
    <fullName>Support_Branding</fullName>
    <filterScope>Queue</filterScope>
    <label>Support</label>
    <queue>Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>